@@ -15,6 +15,7 @@ v1.03 - Big maintenance patch 2020
 		Changed music format from MP3 to OPUS, reducing asset filesize by 65% (54MB)
 		Changed SFX format from WAV to OPUS, reducing asset filesize by 85% (12MB)
 		Fixed broken music filepaths in the demo version
+		Fixed a bug where multiple music tracks could sometimes play at once
 	Graphics
 		Upgraded pixi.js from version 4.4.1 to 5.1.6
 		Rewrote the gradient shader. Lots of extra steps removed and it's now fully documented
@@ -23,7 +24,7 @@ v1.03 - Big maintenance patch 2020
 	New player experience
 		Changed the separator character in the upper left to be less confusing
 		Made the first upgrade display onscreen earlier and lowered the price
-	Bugfixes
+	Other Bugfixes
 		Fixed three bugs that would result in inaccurate preloader console messages
 		Fixed a tiny edge case bug when purchasing biome 4
 	Code Cleanup
